--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=gestao_vagas
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_vagas
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
