--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 				<version>2.8.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
