--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=JAVAGAS_@123#
 security.token.secret.candidate=JAVAGAS_@123#CANDIDATE
+
+token.sonar=sqp_e2de2040a9ae7f99b00f29b2fc2596fd7ac6354d
