--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,10 @@ security.token.secret.candidate=JAVAGAS_@123#CANDIDATE
 
 token.sonar=sqp_e2de2040a9ae7f99b00f29b2fc2596fd7ac6354d
 
-management.endpoints.web.exposure.include=*
+
+management.endpoints.enable-by-default=false
+management.endpoints.web.exposure.include=health,metrics
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+
