--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@ token.sonar=sqp_e2de2040a9ae7f99b00f29b2fc2596fd7ac6354d
 
 
 management.endpoints.enable-by-default=false
-management.endpoints.web.exposure.include=health,metrics
+management.endpoints.web.exposure.include=health,metrics,prometheus
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
 
