--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3.8"
 
+networks:
+  gestao_vagas_net:
+    driver: bridge
+
+volumes:
+  prometheus_data:
+
 services:
   postgres:
     container_name: gestao_vagas_db
@@ -10,3 +17,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: gestao_vagas
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:latest
+    volumes:
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    networks:
+      - gestao_vagas_net
+    ports:
+      - 9090:9090
