--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 volumes:
   prometheus_data:
+  grafana_data:
 
 services:
   postgres:
@@ -28,3 +29,11 @@ services:
       - gestao_vagas_net
     ports:
       - 9090:9090
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    networks:
+      - gestao_vagas_net
